--- a/src/gift.less
+++ b/src/gift.less
@@ -3,6 +3,14 @@ body {
   background-color: #ffffee;
 }
 .gift {
+  position: relative;
   width: 100%;
-  height: 300px;
+  padding-top: 110%;
+}
+.heart {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
