--- a/src/gift.less
+++ b/src/gift.less
@@ -15,17 +15,16 @@ body {
   height: 100%;
 }
 
-
-#cake {
+.cake {
   display: block;
   position: relative;
-  margin: -10em auto 0 auto;
+  margin: -20em auto 0 auto;
 }
 .velas {
   background: #ffffff;
   border-radius: 10px;
   position: absolute;
-  top: 260px;
+  top: 141px;
   left: 50%;
   margin-left: -2.5px;
   margin-top: -8.33333333px;
