--- a/src/gift.less
+++ b/src/gift.less
@@ -1,6 +1,7 @@
 body {
   width: 100%;
-  background-color: #ee9ca7;
+  // background-color: #ee9ca7;
+  background-color: #ffffee;
 }
 .gift {
   position: relative;
