--- a/src/gift.css
+++ b/src/gift.css
@@ -15,9 +15,13 @@ body {
   height: 100%;
 }
 .cake {
+  width: 100%;
+  height: 150px;
+}
+.svg {
   display: block;
   position: relative;
-  margin: -20em auto 0 auto;
+  margin: -300px auto 0 auto;
 }
 .velas {
   background: #ffffff;
@@ -132,14 +136,4 @@ body {
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
-}
-.text {
-  color: #8b6a60;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-style: italic;
-  text-align: center;
-}
-.text h1 {
-  font-size: 1.4em;
 }
