--- a/src/gift.less
+++ b/src/gift.less
@@ -17,9 +17,14 @@ body {
 }
 
 .cake {
+  width: 100%;
+  height: 150px;
+}
+
+.svg {
   display: block;
   position: relative;
-  margin: -20em auto 0 auto;
+  margin: -300px auto 0 auto;
 }
 .velas {
   background: #ffffff;
@@ -144,14 +149,4 @@ body {
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
-}
-.text {
-  color: #8b6a60;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-style: italic;
-  text-align: center;
-}
-.text h1 {
-  font-size: 1.4em;
 }
