--- a/src/gift.css
+++ b/src/gift.css
@@ -5,7 +5,7 @@ body {
 .gift {
   position: relative;
   width: 100%;
-  padding-top: 110%;
+  padding-top: 90%;
 }
 .heart {
   position: absolute;
@@ -15,29 +15,29 @@ body {
   height: 100%;
 }
 .cake {
+  position: relative;
   width: 100%;
-  height: 150px;
+  height: 160px;
+  overflow: hidden;
 }
 .svg {
   display: block;
   position: relative;
-  margin: -300px auto 0 auto;
+  bottom: 320px;
+  margin: 0 auto;
 }
 .velas {
-  background: #ffffff;
-  border-radius: 10px;
   position: absolute;
-  top: 141px;
+  bottom: 70px;
   left: 50%;
-  margin-left: -2.5px;
-  margin-top: -8.33333333px;
-  width: 5px;
+  width: 6px;
   height: 35px;
+  margin-left: -3px;
+  background-color: #ffffff;
+  border-radius: 10px;
   -webkit-transform: translateY(-300px);
-  -ms-transform: translateY(-300px);
   transform: translateY(-300px);
   -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
   backface-visibility: hidden;
   -webkit-animation: in 500ms 6s ease-out forwards;
   animation: in 500ms 6s ease-out forwards;
