--- a/src/gift.css
+++ b/src/gift.css
@@ -1,6 +1,6 @@
 body {
   width: 100%;
-  background-color: #ee9ca7;
+  background-color: #fbcc9d;
 }
 .gift {
   position: relative;
@@ -13,6 +13,13 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+.message {
+  height: 50px;
+  text-align: center;
+  font-size: 24px;
+  color: #666;
+  line-height: 50px;
 }
 .cake {
   position: relative;
@@ -66,7 +73,7 @@ body {
   top: -20px;
   left: 50%;
   margin-left: -2.2px;
-  width: 6.66666667px;
+  width: 8px;
   height: 18px;
 }
 .fuego:nth-child(1) {
