--- a/src/gift.less
+++ b/src/gift.less
@@ -1,6 +1,6 @@
 body {
   width: 100%;
-  background-color: #ee9ca7;
+  background-color: #fbcc9d;
   // background-color: #ffffee;
 }
 .gift {
@@ -14,6 +14,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.message {
+  height: 50px;
+  text-align: center;
+  font-size: 24px;
+  color: #666;
+  line-height: 50px;
 }
 
 .cake {
@@ -73,7 +81,7 @@ body {
   top: -20px;
   left: 50%;
   margin-left: -2.2px;
-  width: 6.66666667px;
+  width: 8px;
   height: 18px;
 }
 
