--- a/src/gift.css
+++ b/src/gift.css
@@ -1,3 +1,10 @@
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 body {
   width: 100%;
   background-color: #fbcc9d;
@@ -7,22 +14,34 @@ body {
   width: 100%;
   padding-top: 90%;
 }
-.heart {
+.gift > .heart {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
-.avatar {
-  width: 30%;
+.gift > .avatar {
+  position: absolute;
+  top: 2.13333333rem;
+  left: 50%;
+  width: 3.84rem;
+  margin-left: -1.92rem;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.message {
-  height: 50px;
-  text-align: center;
-  font-size: 24px;
-  color: #666;
-  line-height: 50px;
+.gift > .avatar::before {
+  content: '';
+  position: relative;
+  display: block;
+  width: 100%;
+  padding-top: 100%;
+  background-image: url('pic.jpg');
+  background-size: cover;
+  border-radius: 100%;
 }
 .cake {
   position: relative;
@@ -30,13 +49,16 @@ body {
   height: 160px;
   overflow: hidden;
 }
-.svg {
+.cake > textarea {
+  display: none;
+}
+.cake > .svg {
   display: block;
   position: relative;
   bottom: 320px;
   margin: 0 auto;
 }
-.velas {
+.cake > .velas {
   position: absolute;
   bottom: 70px;
   left: 50%;
@@ -52,24 +74,22 @@ body {
   -webkit-animation: in 500ms 6s ease-out forwards;
   animation: in 500ms 6s ease-out forwards;
 }
-.velas:after,
-.velas:before {
-  background: rgba(255, 0, 0, 0.4);
-  content: "";
+.cake > .velas::after,
+.cake > .velas::before {
+  content: '';
   position: absolute;
   width: 100%;
-  height: 2.22222222px;
+  height: 3px;
+  background-color: rgba(255, 0, 0, 0.4);
 }
-.velas:after {
+.cake > .velas::after {
   top: 25%;
   left: 0;
 }
-.velas:before {
+.cake > .velas::before {
   top: 45%;
   left: 0;
 }
-/* ============================================== Fire
-*/
 .fuego {
   border-radius: 100%;
   position: absolute;
@@ -98,6 +118,13 @@ body {
 .fuego:nth-child(5) {
   -webkit-animation: fuego 0.2s 6.5s infinite;
   animation: fuego 0.2s 6.5s infinite;
+}
+.message {
+  height: 50px;
+  text-align: center;
+  font-size: 24px;
+  color: #666;
+  line-height: 50px;
 }
 /* ============================================== Animation Fire
 */
