--- a/src/gift.css
+++ b/src/gift.css
@@ -8,6 +8,8 @@
 body {
   width: 100%;
   background-color: #fbcc9d;
+  color: #666;
+  overflow: hidden;
 }
 .gift {
   position: relative;
@@ -20,6 +22,21 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+.gift > .text {
+  position: absolute;
+  bottom: 1.06666667rem;
+  right: 1.28rem;
+}
+.gift .words {
+  height: 0.85333333rem;
+  line-height: 0.85333333rem;
+  font-size: 0.68266667rem;
+}
+.gift .signature {
+  line-height: 16px;
+  font-style: italic;
+  text-align: right;
 }
 .gift > .avatar {
   position: absolute;
@@ -123,7 +140,6 @@ body {
   height: 50px;
   text-align: center;
   font-size: 24px;
-  color: #666;
   line-height: 50px;
 }
 /* ============================================== Animation Fire
