--- a/src/gift.css
+++ b/src/gift.css
@@ -78,8 +78,8 @@ body {
 }
 .time > .count > i {
   display: inline-block;
-  margin-right: 2px;
-  margin-left: 2px;
+  margin-right: 1px;
+  margin-left: 1px;
   font-family: 'digit';
   font-size: 20px;
 }
@@ -184,10 +184,12 @@ body {
   animation: fuego 0.2s 6.5s infinite;
 }
 .title {
+  width: 100%;
   height: 50px;
   text-align: center;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 50px;
+  opacity: 0;
 }
 .fadeIn {
   -webkit-animation-name: fadeIn;
