--- a/src/gift.css
+++ b/src/gift.css
@@ -5,6 +5,10 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+@font-face {
+  font-family: 'digit';
+  src: url('digital.ttf') format('truetype');
+}
 body {
   width: 100%;
   background-color: #fbcc9d;
@@ -80,6 +84,7 @@ body {
   display: inline-block;
   margin-right: 1px;
   margin-left: 1px;
+  font-family: 'digit';
   font-size: 20px;
 }
 .time > .text {
