--- a/src/gift.css
+++ b/src/gift.css
@@ -71,8 +71,7 @@ body {
   width: 100%;
   height: 30px;
   margin-top: 3px;
-  padding-right: 10px;
-  text-align: right;
+  padding-left: 35px;
   font-size: 14px;
   line-height: 30px;
   white-space: nowrap;
