--- a/src/gift.css
+++ b/src/gift.css
@@ -59,6 +59,7 @@ body {
   top: 4.69333333rem;
   width: 100%;
   padding: 0 60px;
+  z-index: 9;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
